# ripcurrents

./: README  cvtest.cpp  pathlines.cpp  pathlines.h  ripcurrents.cpp
RipCurrents_android/app/: build.gradle  proguard-rules.pro
RipCurrents_android/app/src/androidTest/java/edu/borgorucsc/ripcurrents/: ExampleInstrumentedTest.java
RipCurrents_android/app/src/main/: AndroidManifest.xml
RipCurrents_android/app/src/main/java/edu/borgorucsc/ripcurrents/: MainActivity.java
RipCurrents_android/app/src/main/jni/: Android.mk  Application.mk  nativeCode.cpp  nativeCode.h  ripcurrents.cpp  ripcurrents.h
RipCurrents_android/app/src/main/res/layout/: activity_main.xml
RipCurrents_android/app/src/main/res/values/: strings.xml
RipCurrents_android/app/src/test/java/edu/borgorucsc/ripcurrents/: ExampleUnitTest.java
RipCurrents_android/gradle/wrapper/: gradle-wrapper.properties
RipCurrents_main/: CMakeCache.txt  CMakeLists.txt  Makefile  Streakline.cpp  Streakline.hpp  cmake_install.cmake  main.cpp  main_old.cpp  notes.txt  pathlines.cpp  pathlines.h  ripcurrents.cpp  ripcurrents.hpp  ripcurrents_module.cpp
RipCurrents_main/stabilization/: CMakeLists.txt  stabilize.cpp
