cmake_minimum_required(VERSION 2.8)
project( RipCurrents )
find_package( OpenCV  REQUIRED)
add_executable( ripcurrents ripcurrents.cpp )
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
target_compile_features(ripcurrents PUBLIC cxx_lambdas)
target_link_libraries( ripcurrents ${OpenCV_LIBS} )
